fix: troubles with header on mobile resolutions

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -12,21 +12,6 @@
     transition: ease 0.3s;
 }
 
-@media (max-width: 768px) {
-    .header {
-        padding: 10px;
-        
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
-
-    .header--scrolled {
-        background-color: #f7f5f2d6;
-        padding: 10px;
-    }
-}
-
 @media (min-width: 768px) {
     .header {
         position: fixed;
@@ -35,9 +20,25 @@
     }
 }
 
+@media (max-width: 768px) {
+    .header {
+        padding: 10px;        
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    .header--scrolled {
+        background-color: #f7f5f2d6;
+        padding-top: 10px;
+        padding-top: 10px;
+    }
+}
+
 .header--scrolled {
     background-color: #f7f5f2d6;
-    padding: 10px 50px;
+    padding-top: 10px;
+    padding-top: 10px;
 }
 
 .header--scrolled .header__logo {
